Re-arrange the swagger file.
